--- a/gb/18/12/7/n10897103.md
+++ b/gb/18/12/7/n10897103.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tmpkrx391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tmpkrx391/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tmpkrx391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tmpkrx391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tmpkrx391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tmpkrx391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>11月份 至少486名法轮功学员遭绑架</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-5-mh-persecution-arrest-3-600x400.png" />
 <h6>2018年11月中国大陆法轮功学员遭绑架人次按地区分布图。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2018年12月07日讯】11月份，中共<ahref="https://github.com/tmpkrx391/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>了486名法轮功学员，其中，年龄最长者90岁；103人被<ahref="https://github.com/tmpkrx391/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>法轮功学员，178人被抄家，31人被非法判刑，49人遭非法庭审，13人遭非法<ahref="https://github.com/tmpkrx391/djy/blob/master/gb/tag/%E6%89%B9%E6%8D%95.md#1">批捕</a>。</p>
-<p>明慧网报导，被<ahref="https://github.com/tmpkrx391/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>者中153人已经回家，其中2人被绑架后走脱，20人因体检不合格被拒收而回家。被送洗脑班遭受转化（强行放弃修炼）迫害的法轮功学员有7人，被迫离家出走的有5人，失联的有5人。警察勒索法轮功学员现金共达208,720元。</p>
+	<p>【大纪元2018年12月07日讯】11月份，中共<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>了486名法轮功学员，其中，年龄最长者90岁；103人被<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>法轮功学员，178人被抄家，31人被非法判刑，49人遭非法庭审，13人遭非法<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%89%B9%E6%8D%95.md#1">批捕</a>。</p>
+<p>明慧网报导，被<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6.md#1">绑架</a>者中153人已经回家，其中2人被绑架后走脱，20人因体检不合格被拒收而回家。被送洗脑班遭受转化（强行放弃修炼）迫害的法轮功学员有7人，被迫离家出走的有5人，失联的有5人。警察勒索法轮功学员现金共达208,720元。</p>
 <p>绑架严重的地区为黑龙江186人，山东80人，辽宁53人，陕西37人，吉林26人，湖北24人，河北23人，四川18人。</p>
-<p><ahref="https://github.com/tmpkrx391/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>严重的地区为：黑龙江27人，山东16人，四川10人。</p>
+<p><ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E9%AA%9A%E6%89%B0.md#1">骚扰</a>严重的地区为：黑龙江27人，山东16人，四川10人。</p>
 <p>2018年1月至11月份，中共绑架法轮功学员人数更新为4,483人。</p>
 <p>2018年1月至11月份，中共骚扰法轮功学员人数更新为3,973人。</p>
-<figure id="attachment_10897169" style="width: 600px" class="wp-caption alignnone"><ahref="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-5-mh-persecution-arrest-2.png"><img class="size-large wp-image-10897169" src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-5-mh-persecution-arrest-2-600x429.png" alt="" width="600" b="429" /></a><figcaption class="wp-caption-text">2018年1月至11月，大陆法轮功学员遭中共绑架、骚扰人次示意图。（明慧网）</figcaption></figure>
+<figure id="attachment_10897169" aria-describedby="caption-attachment-10897169" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-5-mh-persecution-arrest-2.png"><img class="size-large wp-image-10897169" src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-5-mh-persecution-arrest-2-600x429.png" alt="" width="600" b="429" /></a><figcaption id="caption-attachment-10897169" class="wp-caption-text">2018年1月至11月，大陆法轮功学员遭中共绑架、骚扰人次示意图。（明慧网）</figcaption></figure>
 <h2>绑架</h2>
 <p>11月份，中共绑架486名法轮功学员，他们分布于24个省、自治区、直辖市的73个城市。</p>
 <p>迫害案例：</p>
@@ -22,11 +22,11 @@
 <p>据悉，黑龙江省公安厅杨波来大庆，伙同大庆国保大队冯海波，对被绑架的法轮功学员进行非常严重的酷刑折磨。</p>
 <h3><b>岳父母再次失联　电视主持人呼吁关注</b></h3>
 <p>新唐人电视台主持人郝毅博在中国大陆修炼法轮功的岳父母，曾多次遭中共当局非法逮捕。近日，他的岳父再遭绑架，岳母失联。</p>
-<figure id="attachment_10897195" style="width: 327px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-0.jpg"><img class="wp-image-10897195 " src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-0.jpg" alt="" width="327" b="327" /></a><figcaption class="wp-caption-text">新唐人“老外看中国”节目主持人郝毅博。（明慧网）</figcaption></figure>
+<figure id="attachment_10897195" aria-describedby="caption-attachment-10897195" style="width: 327px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-0.jpg"><img class="wp-image-10897195 " src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-0.jpg" alt="" width="327" b="327" /></a><figcaption id="caption-attachment-10897195" class="wp-caption-text">新唐人“老外看中国”节目主持人郝毅博。（明慧网）</figcaption></figure>
 <p>郝毅博是新唐人电视台“老外看中国”节目主持人，是一位白人，能说一口流利的中文。他主持的节目妙趣横生，获得观众的喜爱，拥有众多的粉丝。</p>
 <p>郝毅博的岳父戴益最近再次遭到中共当局绑架，而岳母盛晓云下落不明。</p>
 <p>在今年11月9日一天之内，黑龙江省大庆地区的至少47位法轮功学员在警察的统一行动中被非法逮捕，郝毅博的岳父也是其中的一位。</p>
-<figure id="attachment_10897201" style="width: 401px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-1.jpg"><img class="wp-image-10897201 size-full" src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-1.jpg" alt="" width="401" b="237" /></a><figcaption class="wp-caption-text">郝毅博的岳父母、黑龙江省法轮功学员戴益和盛晓云。（明慧网）</figcaption></figure>
+<figure id="attachment_10897201" aria-describedby="caption-attachment-10897201" style="width: 401px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-1.jpg"><img class="wp-image-10897201 size-full" src="https://i.epochtimes.com/assets/uploads/2018/12/2018-12-4-205312-1.jpg" alt="" width="401" b="237" /></a><figcaption id="caption-attachment-10897201" class="wp-caption-text">郝毅博的岳父母、黑龙江省法轮功学员戴益和盛晓云。（明慧网）</figcaption></figure>
 <p>郝毅博的妻子臣倩是在近日上网时，偶然看到父亲的名字，“我们看到爸爸的名字时都很吃惊。”她说。</p>
 <p>郝毅博说：“我们试图联系她爸爸，但是没有人接电话；我们也打给她妈妈，她妈妈也没有接。”</p>
 <p>郝毅博和妻子致电中国公安部门，但是得到的答复是，不清楚他岳父母的去向。</p>
@@ -75,41 +75,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/1/15/n10060094.md#1">惨遭中共迫害致死的教育系统法轮功学员</a></li>
-<li><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/7/26/n10592217.md#1">中共迫害老百姓的犯罪手段——绑架</a></li>
-<li><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/8/8/n10624513.md#1">2018年上半年 北京法轮功学员遭迫害综述</a></li>
-<li><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/8/27/n10668612.md#1">辽宁“专案”行动 大规模绑架法轮功学员</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/1/15/n10060094.md#1">惨遭中共迫害致死的教育系统法轮功学员</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/7/26/n10592217.md#1">中共迫害老百姓的犯罪手段——绑架</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/8/n10624513.md#1">2018年上半年 北京法轮功学员遭迫害综述</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/27/n10668612.md#1">辽宁“专案”行动 大规模绑架法轮功学员</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/10/n10551502.md#1" target="_blank">【还原史实】镇反土改 中共建政初年的恐怖统治</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/2/28/n12780478.md#1">预言试析：从大禹治水看到三峡大坝的命运？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812683.md#1">【微视频】官员性交易受害？江苏女辅警判13年</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/16/n12814184.md#1">【珍言真语】姚冠东：坚持表达 香港创作前景仍在</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/16/n12813610.md#1">【横河直播】四国疫苗抗共 缅甸中企落难谁救？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/8/n12796136.md#1">需要更换家中Wi-Fi路由器的四个理由</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/13/n12809630.md#1">曾揭江泽民二奸二假的学者吕加平因病去世</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810014.md#1">吴俊宏补办婚礼面子大 台语歌坛大咖齐聚祝贺</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12811023.md#1">患抑郁症身材发福遭酸 马思纯高EQ回应</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810818.md#1">杨紫着曳地长裙走红毯 裙?下露出黑色马丁靴</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810940.md#1">儿子走路撞到树直呼痛 严立婷教育方法获爆赞</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812179.md#1">林俊逸自曝气喘狂咳 下台急戴氧气筒送医</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812087.md#1">美军传奇狙击手 如何在越战中歼灭女对手？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12809857.md#1">驼背带来9大坏处！简单2招 轻松矫正驼背</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810193.md#1">人死了会发生什么事？ 网民聊得很起劲</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812244.md#1">只有25岁以下的人才听得到这种声音？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tmpkrx391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tmpkrx391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/7/n10897103.htm">11月份 至少486名法轮功学员遭绑架</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/12/7/n10897103.htm">11月份 至少486名法轮功学员遭绑架</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tmpkrx391/djy/blob/master/gb/18/12/7/n10897103.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tmpkrx391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tmpkrx391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tmpkrx391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tmpkrx391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tmpkrx391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/18/12/7/n10897103.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
